# M17Client

./: .gitignore  PulseAudio.md  README.md
CLI/: M17CLI.cpp  Makefile  Thread.cpp  Thread.h  UDPSocket.cpp
Daemon/: AudioBackend.h  AudioCallback.h  CMakeLists.txt  CodePlug.cpp  CodePlug.h  CodePlug.ini  Conf.cpp  Conf.h  DMRDefines.h  Defines.h  GPIO.cpp  GPIO.h  GPSD.cpp  GPSD.h  GitVersion.h  HamLib.cpp  HamLib.h  M17Client.cpp  M17Client.h  M17Client.ini  M17Convolution.cpp  M17Defines.h  M17LSF.cpp  M17RX.cpp  M17RX.h  M17TX.cpp  M17TX.h  M17Utils.cpp  Makefile  Modem.cpp  Modem.h  SoundALSA.cpp  SoundALSA.h  SoundCard.cpp  SoundCard.h  SoundPulse.cpp  SoundPulse.h  SoundSndio.cpp  SoundSndio.h  StatusCallback.h  (+9 more)
GUI/: App.cpp  App.h  CMakeLists.txt  CallsignsEvent.cpp  CallsignsEvent.h  ChannelsEvent.cpp  ChannelsEvent.h  Conf.cpp  Conf.h  Defs.h  DestinationsEvent.cpp  DestinationsEvent.h  ErrorEvent.cpp  ErrorEvent.h  Frame.cpp  Frame.h  GPSCompass.cpp  GPSCompass.h  GPSDialog.cpp  GPSDialog.h  GPSEvent.cpp  GPSEvent.h  Makefile  RSSIEvent.cpp  RSSIEvent.h  ReceiveData.cpp  ReceiveData.h  ReceiveEvent.cpp  ReceiveEvent.h  TextEvent.cpp  TextEvent.h  Thread.cpp  Thread.h  TransmitEvent.cpp  TransmitEvent.h  UDPReaderWriter.cpp  UDPReaderWriter.h  Version.h
TS/: Conf.cpp  Conf.h  M17TS.cpp  M17TS.h  Makefile  UARTController.cpp  UARTController.h  UDPSocket.cpp  UDPSocket.h  Version.h
TS/NX8048K050/: NX8048K050.HMI  NX8048K050.tft  NX8048T050.HMI  NX8048T050.tft
TS/Nextion/: NX3224T024.HMI  NX3224T024.tft  NX8048K050.HMI  NX8048K050.tft  NX8048T050.HMI  NX8048T050.tft
